[gd_scene load_steps=13 format=2]

[ext_resource path="res://Objects/actors/Player.gd" type="Script" id=1]
[ext_resource path="res://Resources/img_board.png" type="Texture" id=2]
[ext_resource path="res://Resources/img_sonny.png" type="Texture" id=3]
[ext_resource path="res://Resources/Sounds/sfx_jump.wav" type="AudioStream" id=4]
[ext_resource path="res://Resources/Sounds/sfx_engine.wav" type="AudioStream" id=5]
[ext_resource path="res://Resources/Sounds/sfx_comeon.wav" type="AudioStream" id=6]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 3.88935
height = 0.193483

[sub_resource type="Gradient" id=2]

offsets = PoolRealArray( 0.00591716, 0.16568, 0.266272, 1 )
colors = PoolColorArray( 0.964706, 0.560784, 0.215686, 1, 0.948905, 0, 0.644959, 1, 0.125, 0.0888672, 0.0888672, 1, 0, 0, 0, 0 )
_sections_unfolded = [ "Resource" ]

[sub_resource type="GradientTexture" id=3]

flags = 4
gradient = SubResource( 2 )
width = 2048

[sub_resource type="Curve" id=4]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]

flags = 4
width = 2048
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 1.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.15
scale = 4.0
scale_random = 0.25
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Color", "Emission Shape", "Gravity", "Initial Velocity", "Scale", "Spread", "Trail" ]

[node name="Player" type="Area2D"]

scale = Vector2( 1.5, 1.5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Trail" type="Particles2D" parent="." index="1"]

position = Vector2( -5.91698e-06, 5.66666 )
rotation = 1.57044
emitting = true
amount = 32
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -32, -32, 64, 64 )
local_coords = false
draw_order = 0
process_material = SubResource( 6 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time" ]

[node name="Sprite" type="Node2D" parent="." index="2"]

editor/display_folded = true
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="SprSprite" type="Sprite" parent="Sprite" index="0"]

scale = Vector2( 1, 0.762797 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="SprSonny" type="Sprite" parent="Sprite" index="1"]

visible = false
position = Vector2( 0, -3.33334 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="sfxJump" type="AudioStreamPlayer2D" parent="." index="3"]

stream = ExtResource( 4 )
volume_db = -10.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="sfxEngine" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 5 )
volume_db = -5.0
autoplay = true
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="sfxComeOn" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 6 )
volume_db = -2.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]

[connection signal="hit" from="." to="." method="_on_Player_hit"]

[connection signal="finished" from="sfxEngine" to="." method="_on_sfxEngine_finished"]


